Implemented update meal plan
